--- a/scripts/xarcade2jstick.service
+++ b/scripts/xarcade2jstick.service
@@ -2,5 +2,8 @@
 Description=Xarcade2Jstick
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStart=/usr/local/bin/xarcade2jstick -s
+
+[Install]
+WantedBy=multi-user.target
